Update to Java 21
