# award-service/src/main/java/com/coderdojo/zen/award/dto/Badge.java
@@ -1,4 +1,0 @@
-package com.coderdojo.zen.award.dto;
-
-public record Badge(Long id, String name, String description, String Category, String imageURL) {
-}
