# badge-service/src/main/java/com/coderdojo/zen/badge/dto/BadgeResponse.java
@@ -1,8 +1,0 @@
-package com.coderdojo.zen.badge.dto;
-
-import com.coderdojo.zen.badge.model.Category;
-import lombok.Builder;
-
-@Builder
-public record BadgeResponse(Long id, String name, String description, Category category, String imageURL) {
-}
