# belt-service/src/main/java/com/coderdojo/zen/belt/BeltController.java
@@ -1,5 +1,9 @@
 package com.coderdojo.zen.belt;
 
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -9,9 +13,7 @@ import org.springframework.web.bind.annotation.*;
 import java.util.List;
 import java.util.Optional;
 
-/**
- * Javadoc
- */
+@Tag(name = "Belt", description = "the Belt API")
 @RestController
 @RequestMapping("/api/belts")
 class BeltController {
@@ -22,12 +24,15 @@ class BeltController {
     public BeltController(BeltRepository repository) {
         this.repository = repository;
     }
-
+    @Operation(summary = "Create user", description = "This can only be done by the logged in user.", tags = { "user" })
     @GetMapping("")
     List<Belt> findAll() {
         return repository.findAll();
     }
-
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "delete Tweet"),
+            @ApiResponse(responseCode = "404", description = "tweet not found")
+    })
     @GetMapping("/{id}")
     Optional<Belt> findById(@PathVariable Integer id) {
         return Optional.ofNullable(repository.findById(id).orElseThrow(BeltNotFoundException::new));
@@ -46,7 +51,8 @@ class BeltController {
             Belt updatedBelt = new Belt(existing.get().id(),
                     existing.get().name(),
                     belt.description(),
-                    belt.imageURL());
+                    belt.image(),
+                    existing.get().version());
 
             return repository.save(updatedBelt);
         } else {
