# belt-service/src/main/resources/openapi.yaml
@@ -1,58 +1,50 @@
 openapi: 3.0.1
 info:
-  title: Belt Service API
-  description: This is a sample Foobar server created using springdocs - a library
-    for OpenAPI 3 with spring boot.
-  termsOfService: http://swagger.io/terms/
-  license:
-    name: Apache 2.0
-    url: http://springdoc.org
-  version: 1.0.0
+  title: OpenAPI definition
+  version: v0
 servers:
-  - url: http://127.0.0.1:8080
-    description: Generated server url
+- url: http://localhost:8080
+  description: Generated server url
 tags:
-  - name: Actuator
-    description: Monitor and interact
-    externalDocs:
-      description: Spring Boot Actuator Web API Documentation
-      url: https://docs.spring.io/spring-boot/docs/current/actuator-api/html/
+- name: Belt
+  description: the Belt API
 paths:
-  /api/v1/belts:
+  /api/belts/{id}:
     get:
       tags:
-        - Belts
-      operationId: all
-      summary: Get all belts
+      - Belt
+      operationId: findById
       parameters:
-          - name: category
-            in: query
-            description: ID of the object to fetch
-            required: false
-            schema:
-              type: string
-              enum:
-                - programming
-                - soft_skills
-                - events
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int32
       responses:
-        "404":
-          description: Not Found
-          content:
-            '*/*':
-              schema:
-                type: string
         "200":
-          description: OK
+          description: delete Tweet
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/CollectionModelEntityModelBelt'
-    post:
+                $ref: '#/components/schemas/Belt'
+        "404":
+          description: tweet not found
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Belt'
+    put:
       tags:
-        - Belts
-      operationId: newBelt
-      summary: Create belt
+      - Belt
+      operationId: update
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int32
       requestBody:
         content:
           application/json:
@@ -60,219 +52,78 @@ paths:
               $ref: '#/components/schemas/Belt'
         required: true
       responses:
-        "404":
-          description: Not Found
-          content:
-            '*/*':
-              schema:
-                type: string
         "200":
           description: OK
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/EntityModelBelt'
-  /api/v1/belts/{id}:
-    get:
-      tags:
-        - Belts
-      operationId: one
-      summary: Get belt by id
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: int64
-      responses:
-        "404":
-          description: Not Found
-          content:
-            '*/*':
-              schema:
-                type: string
-        "200":
-          description: OK
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/EntityModelBelt'
-    put:
-      tags:
-        - Belts
-      operationId: complete
-      summary: Update belt by id
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: int64
-      responses:
-        "404":
-          description: Not Found
-          content:
-            '*/*':
-              schema:
-                type: string
-        "200":
-          description: OK
-          content:
-            '*/*':
-              schema:
-                type: object
+                $ref: '#/components/schemas/Belt'
     delete:
       tags:
-        - Belts
-      operationId: cancel
-      summary: Delete belt by id
+      - Belt
+      operationId: delete
       parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: int64
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int32
       responses:
-        "404":
-          description: Not Found
-          content:
-            '*/*':
-              schema:
-                type: string
         "204":
           description: No Content
-  /actuator:
+  /api/belts:
     get:
       tags:
-        - Actuator
-      summary: Actuator root web endpoint
-      operationId: links
+      - Belt
+      - user
+      summary: Create user
+      description: This can only be done by the logged in user.
+      operationId: findAll
       responses:
-        "404":
-          description: Not Found
-          content:
-            '*/*':
-              schema:
-                type: string
         "200":
           description: OK
           content:
-            application/vnd.spring-boot.actuator.v3+json:
+            '*/*':
               schema:
-                type: object
-                additionalProperties:
-                  type: object
-                  additionalProperties:
-                    $ref: '#/components/schemas/Link'
-            application/vnd.spring-boot.actuator.v2+json:
-              schema:
-                type: object
-                additionalProperties:
-                  type: object
-                  additionalProperties:
-                    $ref: '#/components/schemas/Link'
-            application/json:
-              schema:
-                type: object
-                additionalProperties:
-                  type: object
-                  additionalProperties:
-                    $ref: '#/components/schemas/Link'
-  /actuator/health:
-    get:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Belt'
+    post:
       tags:
-        - Actuator
-      summary: Actuator health web endpoint
-      operationId: links
+      - Belt
+      operationId: save
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Belt'
+        required: true
       responses:
-        "404":
-          description: Not Found
+        "201":
+          description: Created
           content:
             '*/*':
               schema:
-                type: string
-  /actuator/health/{path}:
-    get:
-      tags:
-        - Actuator
-      summary: Actuator path health web endpoint
-      operationId: links
-      responses:
-        "404":
-          description: Not Found
-          content:
-            '*/*':
-              schema:
-                type: string
+                $ref: '#/components/schemas/Belt'
 components:
   schemas:
     Belt:
+      required:
+      - description
+      - image
+      - name
       type: object
       properties:
         id:
           type: integer
-          format: int64
-        description:
-          type: string
-        status:
-          type: string
-          enum:
-            - IN_PROGRESS
-            - COMPLETED
-            - CANCELLED
-    EntityModelBelt:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-        description:
-          type: string
-        status:
-          type: string
-          enum:
-            - IN_PROGRESS
-            - COMPLETED
-            - CANCELLED
-        _links:
-          type: array
-          items:
-            $ref: '#/components/schemas/Link'
-    Link:
-      type: object
-      properties:
-        href:
-          type: string
-        hreflang:
-          type: string
-        title:
-          type: string
-        type:
-          type: string
-        deprecation:
-          type: string
-        profile:
-          type: string
+          format: int32
         name:
           type: string
-        templated:
-          type: boolean
-    CollectionModelEntityModelBelt:
-      type: object
-      properties:
-        _embedded:
-          type: object
-          properties:
-            beltList:
-              type: array
-              items:
-                $ref: '#/components/schemas/EntityModelBelt'
-        _links:
-          type: array
-          items:
-            $ref: '#/components/schemas/Link'
-
-  
+        description:
+          type: string
+        image:
+          type: string
+        version:
+          type: integer
+          format: int32
